--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="app.js" defer></script>
 </head>
 <body class="page">
+    <button class = "reset">Reset</button>
  <!-- <div class="page"> -->
     <div id="container">
 
