added popup and reset logix
added the js logic to reset the etch a sketch container and give me a new one based on the entered inputs. also did the random color selector instead of having every hover color always be black

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 </head>
 <body class="page">
     <button class = "reset">Reset</button>
+<div class="PopupHolder">
+    <div class="popup">
+        <div class="popupTop">
+            <h2>How many sides would you like your Etch a Sketch to have ?</h2>
+        </div>
+        <div class="popupMiddle">
+            <input id="leftsideInput" type="number"  max="100" placeholder="Left Side Input"/>
+            <input id="topsideInput" type="number"  max="100" placeholder="Top Side Input"/>
+        </div>
+        <button class="popupSubmit">Submit!</button>
+    </div>
+</div> 
  <!-- <div class="page"> -->
     <div id="container">
 
